# royal-blue

./: .env.example  .gitignore  Makefile  README.md  build_extract_lambda_zip.sh  build_lambda_layer.sh  build_load_lambda_zip.sh  build_transform_lambda_zip.sh  clean_aws_buckets.sh  example_env  main.py  pyproject.toml  run_sql_testground.sh  set-tfvars.sh
.github/: CODEOWNERS
.github/wokflows/: commit_to_main.yaml
.github/workflows/: commit_to_main.yaml  royal-blue-ci-cd.yaml
jupyter_local_tests/: dim_counterparty.ipynb  dim_currency.ipynb  dim_date.ipynb  dim_design.ipynb  dim_location.ipynb  dim_staff.ipynb  fact_playground.ipynb  pd_playground.ipynb
notebook/: fact_playground.ipynb  pd_playground.ipynb
notebook/test_data/: address_2022-11-3_14-20-49_962000.parquet  currency_2022-11-3_14-20-49_962000.parquet
sql_local_tests/: create_local_totesys_datawarehouse.sql  create_local_totesys_db.sql  seed_local_totesys_db.py
sql_local_tests/seed_data/: counterparty_2022-11-3_14-20-51_563000.parquet  department_2022-11-3_14-20-49_962000.parquet  design_2025-6-9_12-0-9_793000.parquet  payment_type_2022-11-3_14-20-49_962000.parquet  sales_order_2025-6-9_13-11-9_744000.parquet  staff_2022-11-3_14-20-51_563000.parquet
src/: typing_utils.py  utils.py
src/connection/: connection.py  connection_func.py
src/db/: connection.py  db_helpers.py  error_map.py  extract_dataframe.py  helper_functions.py
src/db_conn/: conn.py  extract_dataframe.py
src/lambdas/: extract_lambda.py  load_lambda.py  transform_lambda.py
src/states/: get_current_state.py
src/utilities/: extract_lambda_utils.py  load_lambda_utils.py  pydantic_models.py  typing_utils.py
state/: get_current_state.py  set_current_state.py  test_get_current_state.py  test_set_current_state.py  update_current_state.py  update_state.py
state/helpers/: log_entry.py
state/tests/: test_get_current_state.py  test_set_current_state.py  test_update_current_state.py
terraform/: .terraform.lock.hcl  main.tf  providers.tf  s3.tf  vars.tf
tests/: conftest.py  test_delete_me.py
tests/db/: conftest.py  test_connection.py  test_db_helpers.py
(+115 files in other folders)
